# https-github.com-vrsys-programmiersprachen-aufgabenblatt-2

./: CMakeLists.txt  README.md
.github/workflows/: doctest.yml
applications/: CMakeLists.txt  example.cpp  tests.cpp
framework/: CMakeLists.txt  circle.cpp  circle.hpp  color.hpp  mat2.cpp  mat2.hpp  rectangle.cpp  rectangle.hpp  vec2.cpp  vec2.hpp
